fixed logo width on tablet and mobile

--- a/Parliament.Interact.Web/Content/stylesheets/interact.css
+++ b/Parliament.Interact.Web/Content/stylesheets/interact.css
@@ -10,20 +10,20 @@
 .header-links li {
     display: inline;
     padding: 5px;
-    font-size: 16px;  
+    font-size: 16px;
     color: #589e9e;
     list-style-type: none;
 }
 
-.header-links li:first-child {
-    border-right: 2px solid #589e9e;
-    padding-right: 10px;
-}
+    .header-links li:first-child {
+        border-right: 2px solid #589e9e;
+        padding-right: 10px;
+    }
 
-.header-links li a {
-    text-decoration: none;
-    color: #333333;
-}
+    .header-links li a {
+        text-decoration: none;
+        color: #333333;
+    }
 
 .header-logo {
     display: block;
@@ -53,22 +53,22 @@
     height: 120px;
 }
 
-.panel-heading.orangeHeaderBackground {
-    background-color: #b14d07;
-}
+    .panel-heading.orangeHeaderBackground {
+        background-color: #b14d07;
+    }
 
-.panel-heading.blueHeaderBackground {
-    background-color: #589e9e;
-}
+    .panel-heading.blueHeaderBackground {
+        background-color: #589e9e;
+    }
 
-.panel-heading.purpleHeaderBackground {
-    background-color: #6e6095;
-}
+    .panel-heading.purpleHeaderBackground {
+        background-color: #6e6095;
+    }
 
-.panel-heading h1 {
-    font-size: 60px;
-    color: #ffffff;   
-}
+    .panel-heading h1 {
+        font-size: 60px;
+        color: #ffffff;
+    }
 
 .panel-header-index {
     margin-right: 40px;
@@ -91,10 +91,7 @@
     color: #333333;
     font-size: 30px;
     background-color: #ffffff;
-    background-image:
-    linear-gradient(
-      #ffffff, #ececec
-    );
+    background-image: linear-gradient( #ffffff, #ececec );
 }
 
 .panel-heading .last-panel-heading-column {
@@ -160,6 +157,10 @@ footer div span {
     footer div p {
         line-height: 30px;
     }
+
+    .header-logo {
+        max-width: 630px;
+    }
 }
 
 @media (max-width: 480px) { /* check breakpoint size - this is for a mobile */
@@ -205,7 +206,8 @@ footer div span {
     .footer-title {
         width: 290px;
     }
+
+    .header-logo {
+        max-width: 315px;
+    }
 }
-
-
-
